modify the design layout

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <li>Stain Resistant</li>
                     </ul>
 
-                    <a href="https://api.whatsapp.com/send?phone=60127010878&text=&source=&data=" target="_blank">
+                    <a href="products-3.html" target="_blank">
                         <button type="button" class="btn btn-lg py-1 mt-4">Learn More</button>
                     </a>
                 </div>
@@ -231,7 +231,7 @@
                         <li>No Water Splash</li>
                     </ul>
 
-                    <a href="https://api.whatsapp.com/send?phone=60127010878&text=&source=&data=" target="_blank">
+                    <a href="products-2.html" target="_blank">
                         <button type="button" class="btn btn-lg py-1 mt-4">Learn More</button>
                     </a>
                 </div>
@@ -255,7 +255,7 @@
                         <li>Easy to Install</li>
                     </ul>
 
-                    <a href="https://api.whatsapp.com/send?phone=60127010878&text=&source=&data=" target="_blank">
+                    <a href="products-1.html" target="_blank">
                         <button type="button" class="btn btn-lg py-1 mt-4">Learn More</button>
                     </a>
                 </div>
