--- a/products-2.html
+++ b/products-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nano Handmade Sink</title>
+    <title>Faucet</title>
     <!-- Note: The sizes attribute is not currently supported in any of the major browsers. -->
     <!-- sizes="16x16" // "any" -->
     <link rel="shortcut icon" type="image/webp" href="imgs/SinkOutletLogo.webp" sizes="16x16"/>
@@ -97,6 +97,8 @@
         <!-- Faucet -->
         <div class="product">
             <h1>Faucet</h1>
+
+            <hr>
     
             <center>
                 <img src="imgs/subpages/Faucet (products-2).webp" alt="Faucet">
