--- a/index.html
+++ b/index.html
@@ -312,16 +312,20 @@
                 <form action="mailto: sinkfactory88@gmail.com" method="post" enctype="text/plain">
                     <div class="form-group row" style="background: transparent;">
                         <div class="col-12 my-2">
-                            <input type="text" name="Name" class="form-control" placeholder="Name" required>
+                            <input type="text" name="Name" class="form-control" placeholder="Name*" required>
                         </div>
 
                         <div class="col-12 col-xl-6 col-lg-6 my-2">
-                            <input type="email" name="Email" class="form-control" placeholder="Email" required>
+                            <input type="email" name="Email" class="form-control" placeholder="Email*" required>
                         </div>
 
                         <div class="col-12 col-xl-6 col-lg-6 my-2">
                             <!-- <input id="phone" type="tel // input" name="phone"> -->
                             <input id="phone" type="input" name="TelephoneNum." class="form-control" width="100%" placeholder="Tel." size="150" pattern="[0-9]{10,11}">
+                        </div>
+
+                        <div class="col-12 my-2 red">
+                            * required
                         </div>
                     
                         <div class="col mt-4">
@@ -379,23 +383,28 @@
     <!-- Ouibounce Modal -->
     <div id="ouibounce-modal" class="modal" tabindex="-1" role="dialog">
         <div class="underlay"></div>
-        <div class="modal-dialog" role="document" style="margin-top: 15%;">
+        <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <!-- <h5 class="modal-title">Subscribe Us</h5> -->
+              <h5 class="modal-title">Big Promotion</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <!-- <p>Modal body text goes here.</p> -->
             <!-- <form action="mailto:sinkfactory88@gmail.com">
-                <input type="email" name="Email" class="form-control" placeholder="Email" required>
+                <input type="email" name="Email" class="form-control" placeholder="Email*" required>
             </form> -->
             <div class="modal-body">
-                <img src="imgs/ourProducts/Nano Handmade Sink (backblue).webp" alt="Nano Handmade Sink">
+                <img src="imgs/ads.jpeg" alt="ads">
+                <center>
+                    <a href="https://api.whatsapp.com/send?phone=60127010878&text=&source=&data=" target="_blank">
+                        <button type="button" class="btn btn-lg py-1 mt-4 learnMoreBtn">Learn More</button>
+                    </a>
+                </center>
             </div>
             <!-- <div class="modal-footer">
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-primary">Learn More</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div> -->
           </div>
